Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18392

recovery-small test_160: FAIL: destroying OST objects are blocked 8

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • Lustre 2.16.0
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/ae765827-d30b-42f3-bc6c-ee761d1177d1

      test_160 failed with the following error:

      == recovery-small test 160: MDT destroys are blocked by grouplocks ========================================================== 12:37:56 (1729687076)
      CMD: onyx-119vm7 /usr/sbin/lctl set_param -n mdt.lustre-MDT0000.evict_client 5438529e-93f3-418c-80fe-28b863ed64ea
      /usr/lib64/lustre/tests/test-framework.sh: line 4072: /mnt/lustre/recon: Input/output error
      CMD: onyx-119vm1.onyx.whamcloud.com,onyx-119vm2 /usr/bin/lfs df /mnt/lustre; uname -n >> /mnt/lustre/recon
      Connected clients: onyx-119vm2.onyx.whamcloud.com
      onyx-119vm1.onyx.whamcloud.com
      CMD: onyx-119vm7 /usr/sbin/lctl get_param osp.lustre-OST0000-osc-MDT0000.destroys_in_flight
      osp.lustre-OST0000-osc-MDT0000.destroys_in_flight=9
      CMD: onyx-119vm7 /usr/sbin/lctl get_param osp.lustre-OST0000-osc-MDT0000.destroys_in_flight
      osp.lustre-OST0000-osc-MDT0000.destroys_in_flight=9
      CMD: onyx-119vm7 /usr/sbin/lctl get_param osp.lustre-OST0000-osc-MDT0000.destroys_in_flight
      osp.lustre-OST0000-osc-MDT0000.destroys_in_flight=0
      CMD: onyx-119vm7 /usr/sbin/lctl get_param osp.lustre-OST0000-osc-MDT0000.destroys_in_flight
      osp.lustre-OST0000-osc-MDT0000.destroys_in_flight=0
      CMD: onyx-119vm7 /usr/sbin/lctl get_param -n osp.lustre-OST0000-osc-MDT0000.destroys_in_flight
      CMD: onyx-119vm7 /usr/sbin/lctl get_param osp.lustre-OST0000-osc-MDT0000.error_list
      osp.lustre-OST0000-osc-MDT0000.error_list=
      6 [0x240001b70:4812] llog=[0x23b:1] idx 10
      6 [0x240001b70:4809] llog=[0x23b:1] idx 7
      inflight 8
       recovery-small test_160: @@@@@@ FAIL: destroying OST objects are blocked 8 
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master/4587 - 4.18.0-513.24.1.el8_9.x86_64
      servers: https://build.whamcloud.com/job/lustre-master/4587 - 4.18.0-513.24.1.el8_lustre.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      recovery-small test_160 - destroying OST objects are blocked 8

            dongyang Dongyang Li
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: